--- a/project_report.ipynb
+++ b/project_report.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Visualizing the Effects of Cholesterol and Blood Pressure on Heart Disease\n",
     "\n",
-    "*Mikel Ibarra Gallardo, Akshat Karla, Caitlin Lichimo, JunYuan Liu*"
+    "*Mikel Ibarra Gallardo, Akshat Kalra, Caitlin Lichimo, JinYuan Liu*"
    ]
   },
   {
