seed and randomness control

--- a/project_report.ipynb
+++ b/project_report.ipynb
@@ -664,7 +664,8 @@
    "id": "6ccbc2b7",
    "metadata": {},
    "source": [
-    "## Splitting the Data into a training and test set"
+    "## Splitting the Data into a training and test set\n",
+    "Split the data for cross-validation later on. In order to replicate the same result, all the following part will use a fixed seed to control the randomness of the model."
    ]
   },
   {
