--- a/project_report.ipynb
+++ b/project_report.ipynb
@@ -19,6 +19,11 @@
     "\n",
     "Heart disease is one of, if not the most common causes for death in the United States. The CDC estimates that approximately ⅕ deaths in the country are caused by it, with it being so severe that a person will die every 34 seconds because of heart disease. There are a variety of factors that can contribute to the likelihood of heart disease, along with the varieties that exist, with coronary heart disease (CAD) being the most common of them. Out of the contributing factors towards CAD, there are two in particular that are more influential: blood pressure and cholesterol level in plasma. Studies in the past have shown there to be a correlation between both blood pressure & cholesterol levels and heart disease. A study focusing on blood pressure found that it can be  a major risk factor towards CAD, especially with those who are over 35 and those diagnosed with hypertension (Jeremiah Statler, et al., 1989). Another study which focused on cholesterol found that it has a very strong correlation with CAD, due to the formation of fatty plaque within the arteries which is aided by low density proteolipids (Scott M. Grundy, 1986). The latter study, as well as the CDC, both suggest that one of the most efficient ways to prevent high cholesterol is through a change in diet, regular exercise, and a reduction of consumption of harmful substances (such as alcohol or tobacco). However, this research will be asking the following question: is cholesterol and/or blood pressure good predictors of heart disease?\n",
     "\n",
+    "## Question\n",
+    "### Are cholesterol and/or blood pressure good indicators of heart disease?\n",
+    "\n",
+    "\n",
+    "## Dataset Used\n",
     "We will be using the Heart Disease Data Set provided by UC Irvine. This data set describes heart condition information based on 303 individuals from different regions. This data is divided into 4 databases: Cleveland, Hungary, Switzerland, and the VA Long Beach, however we will only be utilizinng the Cleaveland data. The data set contains 76 attributes, but so far only 14 have been cited in literature:\n",
     "\n",
     "- Age: age in years\n",
@@ -230,7 +235,7 @@
     "\n",
     "  - Some Questionary mark is inside the database which indicates lacking data\n",
     "  - Also, the parameter indicates heart disease have 3 different values and not a optimal factor to train a classification model with binary variable. Therefore, we mutate it to the value 0 or 1 where 0 indicates no heart disease and 1 indicates heart disease.\n",
-    "  - Additionally, for the convenience of implementing classification model later, we mutate a new column Num2 which is a factor to indicate heart disease."
+    "  - Additionally, for the convenience of implementing classification model later, we mutate a new column **Num2** which is a factor to indicate heart disease."
    ]
   },
   {
