--- a/project_report.ipynb
+++ b/project_report.ipynb
@@ -211,11 +211,12 @@
     }
    ],
    "source": [
+    "# read csv file from online database and then name the columns with their corresponde names\n",
     "df_cleveland <- read_delim(\"https://archive.ics.uci.edu/ml/machine-learning-databases/heart-disease/processed.cleveland.data\",\n",
     "                           \",\", col_names = c(\"Age\",\"Sex\", \"p\",\"Trestbps\", \"Chol\", \"Fbs\", \"Restecg\", \"Thalach\", \"Exang\",\n",
     "                                              \"Oldpeak\", \"Slope\", \"Ca\", \"Thal\", \"Num\"))\n",
     "\n",
-    "head(df_cleveland,15)"
+    "head(df_cleveland,15) # show the first 15 rows"
    ]
   },
   {
@@ -358,7 +359,8 @@
     }
    ],
    "source": [
-    "df_cleveland[df_cleveland == \"?\"] <- NA\n",
+    "df_cleveland[df_cleveland == \"?\"] <- NA   # replace ? to NA value\n",
+    "# convert Num to a binary variable\n",
     "df_cleveland <- mutate(df_cleveland, Num2 = Num/Num)\n",
     "df_cleveland[df_cleveland == \"NaN\"] <- 0\n",
     "df_cleveland <- df_cleveland |>\n",
@@ -655,7 +657,7 @@
     }
    ],
    "source": [
-    "# normalization \n",
+    "# normalization and centered the data\n",
     "df_cleveland <- df_cleveland |>\n",
     "  mutate(Age = scale(Age, center = TRUE),\n",
     "         Trestbps = scale(Trestbps, center = TRUE),\n",
@@ -698,11 +700,12 @@
     }
    ],
    "source": [
+    "# set a seed\n",
     "set.seed(5)\n",
-    "\n",
+    "# split the data to 75% training set and 25% testing set\n",
     "cleveland_split <- initial_split(df_cleveland, prop = 0.75, strata = Num2)\n",
-    "cleveland_train <- training(cleveland_split)\n",
-    "cleveland_test <- testing(cleveland_split)\n",
+    "cleveland_train <- training(cleveland_split)   # training set\n",
+    "cleveland_test <- testing(cleveland_split)   # testing set\n",
     "\n",
     "cleveland_split"
    ]
@@ -724,7 +727,7 @@
    "source": [
     "cleveland_recipe <- recipe(Num2 ~ Age + Trestbps, data = cleveland_train) |>\n",
     "  step_scale(all_predictors()) |>\n",
-    "  step_center(all_predictors())"
+    "  step_center(all_predictors())   # create the predictor, strata is Num2"
    ]
   },
   {
@@ -760,7 +763,7 @@
    "source": [
     "knn_spec <- nearest_neighbor(weight_func = \"rectangular\", neighbors = tune()) |>\n",
     "  set_engine(\"kknn\") |>\n",
-    "  set_mode(\"classification\")\n",
+    "  set_mode(\"classification\")     # apply knn-classification model\n",
     "\n",
     "knn_spec"
    ]
@@ -780,7 +783,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cleveland_vfold <- vfold_cv(cleveland_train, v = 5, strata = Num2)"
+    "cleveland_vfold <- vfold_cv(cleveland_train, v = 5, strata = Num2)   # apply cross validation to training set"
    ]
   },
   {
@@ -798,7 +801,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gridvals <- tibble(neighbors = seq(from = 1, to = 80, by = 5))"
+    "gridvals <- tibble(neighbors = seq(from = 1, to = 80, by = 5))    # get the cross validation accuracy as a indicator for the wellness of model"
    ]
   },
   {
@@ -1140,7 +1143,7 @@
    ],
    "source": [
     "cleveland_prediction <- predict(cleveland_fit, cleveland_test) |>\n",
-    "                            bind_cols(cleveland_test)\n",
+    "                            bind_cols(cleveland_test)     # get the predicted result (.pred_class) from trained model and then combine the column with testing set\n",
     "head(cleveland_prediction)"
    ]
   },
@@ -1565,7 +1568,7 @@
     "                    fit(data = cleveland_train)\n",
     "\n",
     "cleveland_testing_set_prediction <- predict(cleveland_fit, cleveland_test) |>\n",
-    "                                        bind_cols(cleveland_test)\n",
+    "                                        bind_cols(cleveland_test)     # get the predicted result (.pred_class) from trained model and then combine the column with testing set\n",
     "cleveland_fit"
    ]
   },
@@ -1622,7 +1625,7 @@
    ],
    "source": [
     "cleveland_prediction_accuracy_2 <- cleveland_testing_set_prediction |>\n",
-    "                                    metrics(truth = Num2, estimate = .pred_class)\n",
+    "                                    metrics(truth = Num2, estimate = .pred_class)            \n",
     "\n",
     "cleveland_prediction_accuracy_2"
    ]
